# se-toolkit-lab-8

./: REPORT.md
backend/src/lms_backend/routers/: items.py
caddy/: Caddyfile
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __main__.py  server.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/: HEARTBEAT.md
nanobot/workspace/skills/observability/: SKILL.md
